--- a/리스트.md
+++ b/리스트.md
@@ -31,8 +31,8 @@
 ## 리스트 안의 리스트
 
 - 특징
-  - 리스트는 리스트 자체를 항목으로 가질 수 있음. '중첩 리스트'
-  - 중첩 리스트는 대괄호가 2개가 필요함.
+  - 리스트는 리스트 자체를 항목으로 가질 수 있음 '중첩 리스트'
+  - 중첩 리스트는 대괄호가 2개가 필요함
   - 중첩 리스트는 중첩 for 문과 잘 어울립니다.
 
 ## 리스트 삭제
